{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 79,
  "lineage": "84c80061-f7b8-5443-090c-b641f54447c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09db7e24340d5be50",
            "association_id": "eipassoc-00554759e0cd4b818",
            "domain": "vpc",
            "id": "eipalloc-09db7e24340d5be50",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b5ac31c133426b9b",
            "private_dns": "ip-10-0-0-225.ap-south-1.compute.internal",
            "private_ip": "10.0.0.225",
            "public_dns": "ec2-3-111-240-203.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.240.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04893cdb768d0f9ee",
            "arn": "arn:aws:ec2:ap-south-1:811614282948:instance/i-03239aa9c8d930ca7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03239aa9c8d930ca7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07e2a8957e1d6af12",
            "private_dns": "ip-10-0-1-163.ap-south-1.compute.internal",
            "private_ip": "10.0.1.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef7dfb5f2b4ff893",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07b9f436d98416fe9",
            "tags": {
              "Name": "terraform vm private"
            },
            "tags_all": {
              "Name": "terraform vm private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a59a8a044816014e"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.security-group",
            "aws_subnet.private-subnet",
            "aws_vpc.custom-vpc",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04893cdb768d0f9ee",
            "arn": "arn:aws:ec2:ap-south-1:811614282948:instance/i-05707c7a8b7b13f45",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05707c7a8b7b13f45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e91560442f977861",
            "private_dns": "ip-10-0-0-253.ap-south-1.compute.internal",
            "private_ip": "10.0.0.253",
            "public_ip": "13.233.179.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b7b61e5e72de4de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0264b1827718334d1",
            "tags": {
              "Name": "terraform vm public"
            },
            "tags_all": {
              "Name": "terraform vm public"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a59a8a044816014e"
            ]
          },
          "dependencies": [
            "tls_private_key.pk",
            "aws_key_pair.kp",
            "aws_security_group.security-group",
            "aws_subnet.public-subnet",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811614282948:internet-gateway/igw-059c72f0be10d7ed1",
            "id": "igw-059c72f0be10d7ed1",
            "owner_id": "811614282948",
            "tags": {
              "Name": "my-gatewy"
            },
            "tags_all": {
              "Name": "my-gatewy"
            },
            "vpc_id": "vpc-0859e92d4e67823c8"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09db7e24340d5be50",
            "connectivity_type": "public",
            "id": "nat-0235326523751c665",
            "network_interface_id": "eni-0b5ac31c133426b9b",
            "private_ip": "10.0.0.225",
            "public_ip": "3.111.240.203",
            "subnet_id": "subnet-0264b1827718334d1",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_internet_gateway.gw",
            "aws_subnet.public-subnet",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811614282948:route-table/rtb-0a0b028aa10b69f72",
            "id": "rtb-0a0b028aa10b69f72",
            "owner_id": "811614282948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0235326523751c665",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-private-route-table"
            },
            "tags_all": {
              "Name": "my-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0859e92d4e67823c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat-gw",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811614282948:route-table/rtb-0e4c143fad1b14ef7",
            "id": "rtb-0e4c143fad1b14ef7",
            "owner_id": "811614282948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059c72f0be10d7ed1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-route-table"
            },
            "tags_all": {
              "Name": "my-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0859e92d4e67823c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d303ba975c5e78bc",
            "route_table_id": "rtb-0e4c143fad1b14ef7",
            "subnet_id": "subnet-0264b1827718334d1"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.custom-vpc",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0193f4d36179bc3cc",
            "route_table_id": "rtb-0a0b028aa10b69f72",
            "subnet_id": "subnet-07b9f436d98416fe9"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811614282948:security-group/sg-0a59a8a044816014e",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a59a8a044816014e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "811614282948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-custom-security-group"
            },
            "tags_all": {
              "Name": "my-custom-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0859e92d4e67823c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811614282948:subnet/subnet-07b9f436d98416fe9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b9f436d98416fe9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811614282948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-private-subnet"
            },
            "tags_all": {
              "Name": "my-private-subnet"
            },
            "vpc_id": "vpc-0859e92d4e67823c8"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811614282948:subnet/subnet-0264b1827718334d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0264b1827718334d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811614282948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-public-subnet"
            },
            "tags_all": {
              "Name": "my-public-subnet"
            },
            "vpc_id": "vpc-0859e92d4e67823c8"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:811614282948:vpc/vpc-0859e92d4e67823c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d7056307588ea21",
            "default_route_table_id": "rtb-028dab97d878d228c",
            "default_security_group_id": "sg-073a986c6ff20c382",
            "dhcp_options_id": "dopt-048b861bb7432e10c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0859e92d4e67823c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028dab97d878d228c",
            "owner_id": "811614282948",
            "tags": {
              "Name": "my-custom-vpc"
            },
            "tags_all": {
              "Name": "my-custom-vpc"
            }
          }
        }
      ]
    }
  ]
}